cabal-version:       >=1.10
name:                v-to-v
version:             0.1.0.0
synopsis:            Verilog-to-Coq converter
description:         Converts Verilog descriptions to Coq models
license:             MIT
author:              Nandor Licker
maintainer:          n@ndor.email
copyright:           (C) 2020 Nandor Licker
build-type:          Simple

executable v-to-v
  main-is:             Main.hs
  other-modules:       AST, Parser, VM, Translate
  build-depends:       base >=4.13 && <4.14, parsec>3.1, mtl
  default-language:    Haskell2010
  default-extensions:  LambdaCase, TupleSections, NamedFieldPuns
